# OpenELESAudio

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jason/ndk/ffmpeg/openeles/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib2.cpp
app/src/main/java/com/jason/ndk/ffmpeg/openeles/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jason/ndk/ffmpeg/openeles/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
